Add a winning system

--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
             <input type="text" class="input mine-input" placeholder="Mines">
             <button type="submit" class="settings-submit">Generate</button>
         </form>
+        <div class="stats">
+            <div class="flag-count"><img src="./resources/flag-icon.svg" alt="Flag"></div>
+            <div class="time"></div>
+        </div>
         <div class="minesweeper"></div>
     </div>
 </body>
