Add timer, delete the C, make the winning system bugless

--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
             <input type="text" class="input mine-input" placeholder="Mines">
             <button type="submit" class="settings-submit">Generate</button>
         </form>
-        <div class="stats">
+        <div class="stats off">
             <div class="flag-count"><img src="./resources/flag-icon.svg" alt="Flag"></div>
-            <div class="time"></div>
+            <div class="timer">00:00</div>
         </div>
         <div class="minesweeper"></div>
     </div>
