Fix link issues I HOPE

--- a/index.html
+++ b/index.html
@@ -10,20 +10,20 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Silkscreen&display=swap" rel="stylesheet"> 
-    <link rel="preload" href="resources/0mine.svg" />
-    <link rel="preload" href="resources/1mine.svg" />
-    <link rel="preload" href="resources/2mine.svg" />
-    <link rel="preload" href="resources/3mine.svg" />
-    <link rel="preload" href="resources/4mine.svg" />
-    <link rel="preload" href="resources/5mine.svg" />
-    <link rel="preload" href="resources/6mine.svg" />
-    <link rel="preload" href="resources/7mine.svg" />
-    <link rel="preload" href="resources/8mine.svg" />
-    <link rel="preload" href="resources/box.svg" />
-    <link rel="preload" href="resources/Cmine.svg" />
-    <link rel="preload" href="resources/flag-box.svg" />
-    <link rel="preload" href="resources/flag-icon.svg" />
-    <link rel="preload" href="resources/mine.svg" />
+    <link rel="preload" href="resources/0mine.svg" as="image" />
+    <link rel="preload" href="resources/1mine.svg" as="image" />
+    <link rel="preload" href="resources/2mine.svg" as="image" />
+    <link rel="preload" href="resources/3mine.svg" as="image" />
+    <link rel="preload" href="resources/4mine.svg" as="image" />
+    <link rel="preload" href="resources/5mine.svg" as="image" />
+    <link rel="preload" href="resources/6mine.svg" as="image" />
+    <link rel="preload" href="resources/7mine.svg" as="image" />
+    <link rel="preload" href="resources/8mine.svg" as="image" />
+    <link rel="preload" href="resources/box.svg" as="image" />
+    <link rel="preload" href="resources/Cmine.svg" as="image" />
+    <link rel="preload" href="resources/flag-box.svg" as="image" />
+    <link rel="preload" href="resources/flag-icon.svg" as="image" />
+    <link rel="preload" href="resources/mine.svg" as="image" />
 </head>
 
 <body>
