I guess finish almost

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
         <h2 class="heading-underline">^^^^^^^^^^^^</h2>
         <a href="scoreboard.html" class="scoreboard-link">Scoreboard</a>
         <form class="minesweeper-settings">
+            <input type="text" class="input username-input" placholder="Nazwa">
             <input type="text" class="input width-input" placeholder="Width">
             <input type="text" class="input height-input" placeholder="Height">
             <input type="text" class="input mine-input" placeholder="Mines">
