--- a/scoreboard.html
+++ b/scoreboard.html
@@ -34,7 +34,7 @@
         </div>
     </div>
     <div class="scoreboard-names">
-        <div>Id</div>
+        <div>Username</div>
         <div>Box amount</div>
         <div>Mine amount</div>
         <div>Time</div>
