--- a/scoreboard.html
+++ b/scoreboard.html
@@ -22,6 +22,10 @@
     <a href="index.html" class="scoreboard-link">MINISWEEPER</a>
     <div class="scoreboard-selects">
         <div class="scoreboard-select">
+            <label for="mode-inp">Game mode</label>
+            <select class="mode-input" name="mode" id="mode-inp"></select>
+        </div>
+        <div class="scoreboard-select">
             <label for="amount-inp">Amount</label>
             <select class="amount-input" name="amount" id="amount-inp"></select>
         </div>
